RESOLVED FIXED121681
[Qt] Crash when trying to download blob URL
https://bugs.webkit.org/show_bug.cgi?id=121681
Summary [Qt] Crash when trying to download blob URL
Allan Sandfeld Jensen
Reported 2013-09-20 07:41:06 PDT
If a webpage sets up a link that triggers a download of a blob URL, qtwebkit crashes.
Attachments
Patch (6.90 KB, patch)
2013-09-20 07:45 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-09-20 07:45:12 PDT
WebKit Commit Bot
Comment 2 2013-09-20 07:47:17 PDT
Attachment 212163 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/platform/qt/TestExpectations', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/network/qt/ResourceRequestQt.cpp', u'Source/WebKit/qt/ChangeLog', u'Source/WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp']" exit_code: 1 Source/WebCore/platform/network/qt/ResourceRequestQt.cpp:65: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2013-09-24 07:15:11 PDT
Comment on attachment 212163 [details] Patch Clearing flags on attachment: 212163 Committed r156330: <http://trac.webkit.org/changeset/156330>
WebKit Commit Bot
Comment 4 2013-09-24 07:15:13 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5 2013-09-24 16:30:12 PDT
(In reply to comment #3) > (From update of attachment 212163 [details]) > Clearing flags on attachment: 212163 > > Committed r156330: <http://trac.webkit.org/changeset/156330> FYI: It broke the !ENABLE(BLOB) builds.
Allan Sandfeld Jensen
Comment 6 2013-09-24 16:43:59 PDT
(In reply to comment #5) > (In reply to comment #3) > > (From update of attachment 212163 [details] [details]) > > Clearing flags on attachment: 212163 > > > > Committed r156330: <http://trac.webkit.org/changeset/156330> > > FYI: It broke the !ENABLE(BLOB) builds. Thanks for the warning. I will try to fix it tomorrow.
Allan Sandfeld Jensen
Comment 7 2013-09-25 07:50:25 PDT
Compile fix for !ENABLE(BLOB) landed in r156394
Note You need to log in before you can comment on or make changes to this bug.