[Qt] Crash when trying to download blob url https://bugs.webkit.org/show_bug.cgi?id=121681

Reviewed by Simon Hausmann.

Source/WebCore:

Resolve any blob URLs before creating a QUrl.

* platform/network/qt/ResourceRequestQt.cpp:
(WebCore::appendBlobResolved):
(WebCore::resolveBlobUrl):
(WebCore::ResourceRequest::toNetworkRequest):

Source/WebKit/qt:

Do not crash if a download was triggered on a resource WebCore handles internally.

* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::FrameLoaderClientQt::convertMainResourceLoadToDownload):

LayoutTests:

Unskip two tests that downloads blob URLs. Note the two tests do not use the download attribute feature.

* platform/qt/TestExpectations:


Canonical link: https://commits.webkit.org/139838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156330 268f45cc-cd09-0410-ab3c-d52691b4dbfc